# cloud-voyage

./: .env.example  .gitignore  README.md  docker-compose.yaml  redis.conf.example
backend/: Dockerfile  README.md  pyproject.toml  pytest.ini  test.txt
backend/cloud_voyage/: __init__.py  __main__.py  api.py  handlers.py  routes.py
bot/: Dockerfile  pyproject.toml
bot/bot/: __main__.py  config.py  handlers.py  keyboards.py  states.py  weather.py
frontend/: Dockerfile  README.md  index.html  package.json  pyproject.toml  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  __main__.py  app.css  app.tsx  index.tsx
frontend/src/components/: RoutePlanner.tsx  WeatherInfo.tsx  week-weather-card.css  week-weather-card.tsx
frontend/src/services/: WeatherService.ts
