[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alchemmist <anton.ingrish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
