[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Alchemmist <anton.ingrish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.18.1"
pandas = "^2.2.3"
dash-bootstrap-components = "^1.6.0"
dash-leaflet = "^1.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
